--- a/TryHackMe/Brooklyn99/Brooklyn99.html
+++ b/TryHackMe/Brooklyn99/Brooklyn99.html
@@ -161,12 +161,10 @@ Save with C^R and exit C^X</p>
 
 <p><img src="./images/20.png" alt="alt text" /></p>
 
-<p>run nano with sudo
-1) sudo nano
-(it will ask your user password)
-2) ^R ^X 
-(control+R and control+X respectively)
-4) reset; sh 1>&amp;0 2>&amp;0</p>
+<p>run nano with sudo:
+<code>sudo nano</code> (it will ask your user password)
+<code>^R ^X</code> (control+R and control+X respectively)
+<code>reset; sh 1&gt;&amp;0 2&gt;&amp;0</code></p>
 
 <p><img src="./images/13.png" alt="alt text" /></p>
 
