--- a/TryHackMe/EasyPeasy/EasyPeasy.html
+++ b/TryHackMe/EasyPeasy/EasyPeasy.html
@@ -280,7 +280,7 @@ SMASH THE <code>linpeas.sh</code>:</p>
 <p><img src="./images/48.PNG" alt="alt text" />
 <code>Reverse Shell</code> attempted to connect to <code>MY HOST</code> and <code>1984</code> my port respectively. Let's check whether I was correct or not :)</p>
 
-<p><img src="./images/Pasted image 20241103222602.png" alt="alt text" /></p>
+<p><img src="./images/51.png" alt="alt text" /></p>
 
 <p>There was <code>UNKNOWN</code> host connected my machine from port <code>52196</code>.</p>
 
