--- a/TryHackMe/Thompson/Thompson.html
+++ b/TryHackMe/Thompson/Thompson.html
@@ -292,5 +292,7 @@ echo "</p>
 
 <p><img src="./images/25.png" alt="alt text" /></p>
 
+<p><img src="./images/26.png" alt="alt text" /></p>
+
 <p>May The Pentest Be With You ! ! !</p>
 </body></html>
