--- a/TryHackMe/Encrypted Pastebin/Encrypted Pastebin.html
+++ b/TryHackMe/Encrypted Pastebin/Encrypted Pastebin.html
@@ -104,4 +104,36 @@
 <p>Do not consider about this payload because it is applying deserialization.</p>
 
 <p>Most probably, <code>decryptLink()</code> method trying to decrypt the <code>postCt</code> coming from different section of the application. Plus, it initiates to <code>UTF8</code> decoding operation. Raising <code>PaddingException()</code>. Therefore, it is suitable to search for PaddingException thing and json conversion category:</p>
+
+<p>Since I got successfully crash the target, I will try all the alphabet against the application.</p>
+
+<p>Results:</p>
+
+<p><img src="./images/6.png" alt="alt text" /></p>
+
+<p>It is clear that there are also matching values specifically <code>upper case letters</code>.  This means that what if I match different character set on entire encrypted thing. Since it will be complex, I decided to search for this especially the <code>PaddingException</code>.  </p>
+
+<p>After couple of hours, there was a page indicating <code>padding oracle attack vector</code>. Therefore, I decided to implement this approach presented on the page.</p>
+
+<p><a href="https://www.nccgroup.com/us/research-blog/cryptopals-exploiting-cbc-padding-oracles/">Padding Attack</a></p>
+
+<p>On this page there was a python script that handles the cryptographic operations. However, our application running on web ,so I immediately customize the script:</p>
+
+<p><strong>Detect Padding Exceptions</strong></p>
+
+<p>import requests</p>
+
+<p>def oracle(iv, ct):
+    response = requests.post("https://989aa4da0cc7149eddb8b848a4369ee0.ctf.hacker101.com/?post=RHAgDiavHF5VVy-uR0bdS6HxTnZ66adcSVL0EMr5Sr24JdHjNOcJcvexjeQB86GtGUeHyk4iqVjHSxGfjQAh3wkvleSkARGJEHbNit23mKmA15LJm-C0XDD2GXJUg-BRXuBM3zTRam4GzI4ptKVk7ryUEZkcQHvEEdxso6GVR9XSDb92Q7JSZOpmbhtnr4vbmCvgHvg085r5mOnXtGkoGb~~", data={"iv": iv, "ct": ct})
+    if "PaddingException" in response.text:
+        return False
+    return True</p>
+
+<p>,but I could not successfully handle the script. Instead, I found the logic behind the algorithm then found a script against specifically for this implementation.</p>
+
+<p><img src="./images/7.png" alt="alt text" /></p>
+
+<p>Special characters (<code>~</code>, <code>!</code>, <code>-</code>) are replaced to form a standard Base64 string. However, this might not fully fix the string's formatting issues.</p>
+
+<p><code>b64d = lambda x: base64.decodestring(x.replace('~', '=').replace('!', '/').replace('-', '+'))</code></p>
 </body></html>
