library external link added.

--- a/TryHackMe/Encrypted Pastebin/Encrypted Pastebin.html
+++ b/TryHackMe/Encrypted Pastebin/Encrypted Pastebin.html
@@ -173,6 +173,10 @@
 
 <p>First of all, in order to run the script without any errors, you should install required libraries provided by script. Even though all the libraries are built-in in <code>Python</code>, <code>requests</code> library needs to further installation. You can select <code>virtualization method</code> or <code>direct installation</code>. Direct installation means that it will be always in your OS's default library lists.</p>
 
+<p>If you want to check all the <code>built-in</code> libraries &amp; understand the external modules check the manual:</p>
+
+<p><a href="https://docs.python.org/3/library/index.html">Python Standard Library Manual</a></p>
+
 <p>I highly recommend you to use <code>virtualization</code> since by virtualizing the <code>environment</code>, entire packages will be temporarily stored on the virtual environment. Furthermore, if you encounter any issues when you decide on install as <code>system environment</code>, it may lead to complex issues regarding to kernel.</p>
 
 <h3>Install virtual environment &amp; install dependencies (libraries) &amp; Usage</h3>
